--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,36 @@
 services:
-  app:
-    build: .
-    command: npm run dev
-    volumes:
-      - .:/usr/src/app
-    depends_on:
-      - postgres-db
-    env_file:
-      - .env/.env.development.local
-
   postgres-db:
     image: postgres:16
+    container_name: scanio-postgres
     environment:
-      POSTGRES_USER: eddie
-      POSTGRES_PASSWORD: Kokolusoe123
-      POSTGRES_DB: scanio_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${DB_PORT:-5432}:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
+  app:
+    build: .
+    container_name: scanio-app
+    env_file:
+      - .env.${NODE_ENV:-development}
+    ports:
+      - "${PORT:-5003}:5003"
+    volumes:
+      - ./src:/app/src
+      - ./prisma:/app/prisma
+      - /app/node_modules
+    depends_on:
+      postgres-db:
+        condition: service_healthy
+    restart: unless-stopped
 
 volumes:
   postgres-data:
